--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,94 @@
 *{
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+.container{
+    width: 1140px;
+    margin: 0 auto;
+}
+.promo{
+height: 800px;
+background: url('../img/bg/main_bg.jpg') center center/cover no-repeat;
+padding: 38px 0 60px 0;
+}
+.logo_img{
+    display: block;
+    margin: 0 auto;
+}
+.logo_text{  
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    text-align: center;
+    margin-top: 14px;
+}
+h1{
+    margin-top: 52px;
+}
+.title{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 41px;
+    text-transform: uppercase;
+    color: #F9BF3B;
+    text-align: center;
+}
+h2.title{
+    margin-top: 21px;
+}
+.title_big{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 80px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    text-align: center;
+    margin-top: 21px;
+}
+.promo_text{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 21px;
+    color: #FFFFFF;
+    margin-top: 22px;
+}
+.promo_text span{
+    font-weight: 700;
+    color: #F9BF3B;
+}
+.promo_btn{
+    display: block;
+    font-family: 'RobotoCondensed';
+    font-size: 21px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    padding: 24px 14px;
+    background: linear-gradient(0deg, #2798B9 0%, #3AB6DA 100%);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+    outline: none;
+    border: none;
+    border-radius: 4px;
+    margin: 72px auto 0 auto;
+}
+.promo_btn_text{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 100;
+font-size: 15px;
+text-transform: uppercase;
+color: #ffffff59;
+text-align: center;
+margin-top: 70px;
+}
+.promo_arrow_down{
+    display: block;
+    margin: 0 auto;
+    margin-top: 4px;
 }
