--- a/src/css/style.css
+++ b/src/css/style.css
@@ -76,19 +76,68 @@ h2.title{
     border: none;
     border-radius: 4px;
     margin: 72px auto 0 auto;
+    cursor: pointer;
 }
-.promo_btn_text{
+.more_text{
     font-family: 'Roboto';
-font-style: normal;
-font-weight: 100;
-font-size: 15px;
-text-transform: uppercase;
-color: #ffffff59;
-text-align: center;
-margin-top: 70px;
+    font-weight: 100;
+    font-size: 15px;
+    text-transform: uppercase;
+    color: #ffffff59;
+    text-align: center;
+    margin-top: 70px;
 }
-.promo_arrow_down{
+.more_img{
     display: block;
     margin: 0 auto;
     margin-top: 4px;
+}
+.waiting{
+    height: 607px;
+    background: #EFEFEF;
+    padding: 85px 0 75px 0;
+}
+
+.waiting_header{
+    font-family: 'Roboto';
+    font-weight: 400;
+    font-size: 30px;
+    text-transform: uppercase;
+    text-align: center;
+    color: #252525; 
+}
+.waiting_divider{
+    margin: 0 auto;
+    margin-top: 18px;
+    width: 220px;
+    height: 4px;
+    background: #F9BF3B;
+}
+.waiting_subheader{
+    margin-top: 18px;
+    font-family: 'Roboto';
+    font-weight: 400;
+    font-size: 23px;
+    text-align: center;
+    color: #4A4A4A;
+}
+.waiting_wrapper{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 44px;
+}
+.waiting_item{
+    width: 360px;
+}
+.waiting_img{
+    width: 100%;
+}
+.waiting_descr{
+    margin-top: 26px;
+    font-family: 'Roboto';
+    font-weight: 300;
+    font-size: 15px;
+    text-align: center;
+
+    color: #4A4A4A;
 }
