--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,8 +2,10 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Roboto';
 }
 .container{
+    position: relative;
     width: 1140px;
     margin: 0 auto;
 }
@@ -17,7 +19,6 @@ padding: 38px 0 60px 0;
     margin: 0 auto;
 }
 .logo_text{  
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
     font-size: 15px;
@@ -30,7 +31,6 @@ h1{
     margin-top: 52px;
 }
 .title{
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 900;
     font-size: 41px;
@@ -42,7 +42,6 @@ h2.title{
     margin-top: 21px;
 }
 .title_big{
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 900;
     font-size: 80px;
@@ -52,7 +51,6 @@ h2.title{
     margin-top: 21px;
 }
 .promo_text{
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 300;
     font-size: 21px;
@@ -79,7 +77,6 @@ h2.title{
     cursor: pointer;
 }
 .more_text{
-    font-family: 'Roboto';
     font-weight: 100;
     font-size: 15px;
     text-transform: uppercase;
@@ -93,13 +90,12 @@ h2.title{
     margin-top: 4px;
 }
 .waiting{
-    height: 607px;
+    min-height: 607px;
     background: #EFEFEF;
     padding: 85px 0 75px 0;
 }
 
 .waiting_header{
-    font-family: 'Roboto';
     font-weight: 400;
     font-size: 30px;
     text-transform: uppercase;
@@ -115,7 +111,6 @@ h2.title{
 }
 .waiting_subheader{
     margin-top: 18px;
-    font-family: 'Roboto';
     font-weight: 400;
     font-size: 23px;
     text-align: center;
@@ -123,21 +118,47 @@ h2.title{
 }
 .waiting_wrapper{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-top: 44px;
 }
 .waiting_item{
-    width: 360px;
+    width: 342px;
 }
 .waiting_img{
     width: 100%;
 }
 .waiting_descr{
     margin-top: 26px;
-    font-family: 'Roboto';
     font-weight: 300;
     font-size: 15px;
     text-align: center;
 
     color: #4A4A4A;
+}
+.optimization{
+    min-height: 547px;
+    padding: 108px 0 74px 0;
+    
+}
+.optimization_header{
+    margin-left: 391px;
+    font-weight: 900;
+    font-size: 30px;
+    text-transform: uppercase;
+    color: #299CBD;
+}
+.optimization_text{
+    margin-left: 391px;
+    font-weight: 300;
+    font-size: 17px;
+    color: #4A4A4A;
+}
+.optimization_text span{
+    font-weight: 700;
+}
+.optimization_img{
+    position: absolute;
+    top: -47px;
+    left: -240px;
+    z-index: -1;
 }
