--- a/src/css/style.css
+++ b/src/css/style.css
@@ -242,3 +242,19 @@ h2.title{
     text-align: center;
     color: #4A4A4A;
 }
+footer{
+    min-height: 170px;
+    background-color:#1A1A1A;
+    padding: 58px 0 68px 0;
+
+    font-weight: 300;
+    font-size: 15px;
+    text-align: center;
+    
+
+    color: #888888;
+}
+footer a{
+    color: #888888;
+    text-decoration-line: underline;
+}
